# base_environment_inside_docker

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
conan/: conanfile.py
src/: main.cpp
src/math_func/: CMakeLists.txt
src/math_func/includes/: math.hpp
src/math_func/src/: math.cpp
tests/: CMakeLists.txt  test.cpp
